crates/vise/tests/ui/metrics/non_monotonic_buckets.rs
use vise::Buckets;

const BOGUS_BUCKETS: Buckets = Buckets::values(&[0.1, 0.2, 0.1, 0.5]);

fn main() {}
